Mobile Position Fix
fix for portfolio grid margin -bottom to fix page cutoff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,6 @@ body {
   }
 
   #grid {
-    margin-bottom: 80px;
+    margin-bottom: 100px;
   }
 }
